[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/TableOne.gd" type="Script" id=1]
[ext_resource path="res://sprites/logo.png" type="Texture" id=2]

[sub_resource type="Theme" id=1]


[node name="Restaurant" type="Node2D"]

[node name="TableOne" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
margin/left = 743.0
margin/top = 220.0
margin/right = 951.0
margin/bottom = 408.0
script/script = ExtResource( 1 )

[node name="ChairOne" type="CheckBox" parent="TableOne"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = 31.0
margin/right = 120.0
margin/bottom = 54.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="ChairTwo" type="CheckBox" parent="TableOne"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 148.0
margin/top = 71.0
margin/right = 174.0
margin/bottom = 94.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="ChairThree" type="CheckBox" parent="TableOne"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 127.0
margin/top = 118.0
margin/right = 153.0
margin/bottom = 141.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="ChairFour" type="CheckBox" parent="TableOne"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 67.0
margin/top = 118.0
margin/right = 93.0
margin/bottom = 141.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="ChairFive" type="CheckBox" parent="TableOne"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 44.0
margin/top = 71.0
margin/right = 70.0
margin/bottom = 94.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Eating" type="Sprite" parent="TableOne"]

visibility/visible = false
transform/pos = Vector2( 143.066, 124.755 )
transform/scale = Vector2( 0.162387, 0.162387 )
texture = ExtResource( 2 )


